# xinux

./: CONFIG.md  Cargo.toml  LICENSE  README.md  build.sh
src/: execute.rs  execute2.rs  execute3.rs  main.rs  xinsays.rs
