[package]
name = "xinux"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clearscreen = "4.0.1"
colored = "3.0.0"
comfy-table = "7.1.4"
dialoguer = "0.11.0"
dirs = "6.0.0"
glob = "0.3.2"
hostname = "0.4.0"
humantime = "2.2.0"
levenshtein = "1.0.5"
rand = "0.9.0"
rayon = "1.10.0"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
shell-words = "1.1.0"
sysinfo = { version = "0.34.2", features = ["multithread"] }
toml = "0.8.20"
unicode-width = "0.2.0"
whoami = "1.6.0"
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"